# llm-from-scratch

./: chapter-2.ipynb  chapter-3.ipynb  pyproject.toml
.ipynb_checkpoints/: chapter-3-checkpoint.ipynb
