[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.19.0",
    "ipykernel>=6.30.1",
    "ipython>=9.6.0",
    "jupyterlab>=4.4.9",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
]
